--- a/password-recovery.html
+++ b/password-recovery.html
@@ -118,7 +118,7 @@
                      Новый пароль <span>(optional)</span></label>
                           <div class="input__block">
                             <div class="input__wrap"> 
-                              <input class="input applicaton-start__input js-inputPass js-inputPassSecurity js-pass js-emptyCheck" type="password" id="recovery-password" placeholder="Пароль">
+                              <input class="input js-emptyCheck js-inputPass js-inputPassSecurity js-pass js-emptyCheck" type="password" id="recovery-password" placeholder="Пароль">
                               <button class="input__eye js-inputEye" type="button"></button>
                               <ul class="input__password-reqs js-passReqs">
                                 <li class="js-passSize">Длина пароля не менее 10 символов</li>
@@ -126,10 +126,10 @@
                                 <li class="js-passSymbol">Минимум один специальный символ (~!@#$%^&*()+`'";:<>/\|)</li>
                               </ul>
                             </div>
-                            <div class="profile-security__level"> 
+                            <div class="profile-security__level js-passSecurity">
                               <p class="profile-security__level-label">Надежность:</p>
-                              <div class="profile-security__level-wrap profile-security__level-wrap--green">   
-                                <p class="profile-security__level-name">Высокий</p>
+                              <div class="profile-security__level-wrap js-passSecurityWrap">
+                                <p class="profile-security__level-name js-passSecurityName"> </p>
                                 <div class="profile-security__level-icon"><span> </span><span> </span><span> </span></div>
                               </div>
                             </div>
