--- a/apply.html
+++ b/apply.html
@@ -292,13 +292,13 @@
                     <div class="input__error js-inputError">Введите хотя бы 1 вариант</div>
                   </div>
                   <div class="input__block application-about__last-inputs">
-                    <label class="input__label input__label--img">Ваш 8-значный UID на Riwatex
+                    <label class="input__label input__label--img">Ваш 9-значный UID на Riwatex
                       <svg>
                         <use xlink:href="img/sprites/sprite.svg#question"></use>
                       </svg>
                     </label>
                     <div class="input__wrap"> 
-                      <input class="input js-emptyCheck" type="text" placeholder="Введите Riwatex UID">
+                      <input class="input js-emptyCheck js-inputNumbers" type="text" placeholder="Введите Riwatex UID">
                       <div class="input__error js-inputError">Обязательно для заполнения</div>
                     </div>
                   </div>
